--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.1.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
-
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
 }
 
 test {
@@ -28,7 +28,14 @@ if(project.hasProperty('browser')){
     systemProperty 'browser', "${browser}"
 }
 }
-
+task sanity(type: Test){
+    useTestNG{
+        suites 'src/test/resources/sanity-test.xml'
+    }
+    if(project.hasProperty('browser')){
+        systemProperty 'browser', "${browser}"
+    }
+}
 task all(type: Test){
     useTestNG{
         suites 'src/test/resources/testng-all.xml'
